compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__recursion__not_tco_due_to_assignment.snap
---
source: compiler-core/src/javascript/tests/recursion.rs
expression: "\npub fn main(x) {\n  let z = {\n    let y = x\n    main(y - 1)\n  }\n  z\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  let z = {
    let y = x
    main(y - 1)
  }
  z
}


----- COMPILED JAVASCRIPT
export function main(x) {
  let z = (() => {
    let y = x;
    return main(y - 1n);
  })();
  return z;
}
