compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__recursion__tco.snap
---
source: compiler-core/src/javascript/tests/recursion.rs
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> main(x - 1)\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> main(x - 1)
  }
}


----- COMPILED JAVASCRIPT
export function main(loop$x) {
  while (true) {
    let x = loop$x;
    if (x === 0n) {
      return undefined;
    } else {
      loop$x = x - 1n;
    }
  }
}
